--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,9 @@
 		crossorigin="anonymous" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -16,49 +20,202 @@
 	<header>
 		<div class="menu-bg">
 			<div class="menu">
-				<div class="menu_logo">
+				<div class="menu__logo">
 					<a href="index.html"><img src="img/logo.png" alt="logo"></a>
-				</div> <!-- .menu_logo -->
+				</div>
 				<nav class="nav">
-					<ul class="nav_list">
-						<li><a href="#somos" class="nav_link">Quem Somos</a></li>
-						<li><a href="nav_link" class="#cursos">Nossos Cursos</a></li>
-						<li><a href="#planos" class="nav_link">Planos</a></li>
-						<li><a href="#vantagens" class="nav_link">Vantagens</a></li>
-					</ul><!-- .nav_link -->
-				</nav> <!-- .nav -->
-			</div> <!-- .menu -->
-		</div> <!-- .menu-bg -->
-
-		<h1 class="intro">Aprenda a programar, <br/> Um projeto por vez</h1>
+					<ul class="nav__list">
+						<li><a href="#somos" class="nav__link">Quem Somos</a></li>
+						<li><a href="#cursos" class="nav__link">Nossos Cursos</a></li>
+						<li><a href="#planos" class="nav__link">Nossos Planos</a></li>
+						<li><a href="#vantagens" class="nav__link">Vantagens</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+		<h1 class="intro">Aprenda a programar, <br />um projeto por vez.</h1>
 	</header>
-
 	<hr>
-
 	<section class="somos" id="somos">
-		<h2 class="section_titulo">Quem somos</h2>
+		<h2 class="section__titulo">Quem Somos</h2>
 		<div class="somos-c">
 			<div class="somos-c__texto">
 				<p>
-					Mussum Ipsum, cacilds vidis litro abertis. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu
+					Mussum Ipsum, cacilds vidis litro abertis. Todo mundo vê os porris que eu tomo, mas ninguém vê os
+					tombis que eu
 					levo!
-					Atirei o pau no gatis, per gatis num morreus. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Cevadis
+					Atirei o pau no gatis, per gatis num morreus. Mais vale um bebadis conhecidiss, que um alcoolatra
+					anonimis. Cevadis
 					im
 					ampola pa arma uma pindureta.
 				</p>
 				<br>
 				<p>
-					Copo furadis é disculpa de bebadis, arcu quam euismod magna. Praesent vel viverra nisi. Mauris aliquet nunc non
+					Copo furadis é disculpa de bebadis, arcu quam euismod magna. Praesent vel viverra nisi. Mauris
+					aliquet nunc non
 					turpis
-					scelerisque, eget. Interagi no mé, cursus quis, vehicula ac nisi. Suco de cevadiss, é um leite divinis, qui tem
+					scelerisque, eget. Interagi no mé, cursus quis, vehicula ac nisi. Suco de cevadiss, é um leite
+					divinis, qui tem
 					lupuliz,
 					matis, aguis e fermentis.
 				</p>
-			</div><!-- .somos-c__texto -->
-			<div>
-				<img src="img/somos.png" alt="Quem somos">
-			</div> <!-- .somos-c -->
-		</div><!-- .somos-c -->
-	</section><!-- .somos -->
+			</div>
+			<div class="somos-c__img">
+				<img src="./img/somos.png" alt="Quem somos">
+			</div>
+		</div>
+	</section>
+	<hr>
+	<section class="cursos" id="cursos">
+		<h2 class="section__titulo">Nossos Cursos</h2>
+		<div class="cursos-c">
+			<div class="curso">
+				<img src="img/ai.png" alt="Inteligência Artificial" class="curso__img">
+				<h3 class="curso__titulo">Inteligência Artificial</h3>
+				<p class="curso__descricao"> Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius.
+					Nullam a
+					nisl ut ante blandit hendrerit.
+					Aenean
+					sit amet nisi.</p>
+			</div>
+			<div class="curso">
+				<img src="img/front.png" alt="Frontend" class="curso__img">
+				<h3 class="curso__titulo">Frontend</h3>
+				<p class="curso__descricao"> Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius.
+					Nullam a
+					nisl ut ante blandit hendrerit.
+					Aenean
+					sit amet nisi.</p>
+			</div>
+			<div class="curso">
+				<img src="img/seguranca.png" alt="Segurança" class="curso__img">
+				<h3 class="curso__titulo">Segurança</h3>
+				<p class="curso__descricao"> Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius.
+					Nullam a
+					nisl ut ante blandit hendrerit.
+					Aenean
+					sit amet nisi.</p>
+			</div>
+		</div>
+	</section>
+	<hr>
+	<section class="planos" id="planos">
+		<h2 class="section__titulo">Planos</h2>
+		<div class="planos-c">
+			<div class="plano">
+				<h3 class="plano__titulo">Básico</h3>
+				<span class="plano__preco"><sup>R$</sup>25</span>
+				<hr class="plano__preco__linha">
+				<div class="plano-lista">
+					<li class="plano-lista__item">1 mês de acesso ilimitado</li>
+					<li class="plano-lista__item">Acesso a todos os cursos</li>
+					<li class="plano-lista__item">Certificado de conclusão</li>
+				</div>
+				<button class="plano__comprar">COMPRAR</button>
+			</div>
+			<div class="plano">
+				<h3 class="plano__titulo">Premium</h3>
+				<span class="plano__preco"><sup>R$</sup>40</span>
+				<hr class="plano__preco__linha">
+				<div class="plano-lista">
+					<li class="plano-lista__item">1 mês de acesso ilimitado</li>
+					<li class="plano-lista__item">Acesso a todos os cursos</li>
+					<li class="plano-lista__item">Certificado de conclusão</li>
+					<li class="plano-lista__item">Suporte</li>
+				</div>
+				<button class="plano__comprar">COMPRAR</button>
+			</div>
+			<div class="plano">
+				<h3 class="plano__titulo">Ultra</h3>
+				<span class="plano__preco"><sup>R$</sup>60</span>
+				<hr class="plano__preco__linha">
+				<div class="plano-lista">
+					<li class="plano-lista__item">1 mês de acesso ilimitado</li>
+					<li class="plano-lista__item">Acesso a todos os cursos</li>
+					<li class="plano-lista__item">Certificado de conclusão</li>
+					<li class="plano-lista__item">Suporte</li>
+					<li class="plano-lista__item">Download das aulas</li>
+				</div>
+				<button class="plano__comprar">COMPRAR</button>
+			</div>
+		</div>
+	</section>
+	<hr>
+	<section class="vantagens" id="vantagens">
+		<div class="vantagem">
+			<h2 class="vantagem__titulo">Foco em projeto</h2>
+			<p class="vantagem__descricao">Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. Nullam a
+				nisl
+				ut ante blandit hendrerit. Aenean sit
+				amet nisi.</p>
+		</div>
+
+		<div class="vantagem">
+			<h2 class="vantagem__titulo">Portfólio incrível</h2>
+			<p class="vantagem__descricao">Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. Nullam a
+				nisl
+				ut
+				ante blandit hendrerit. Aenean sit
+				amet nisi.</p>
+		</div>
+
+		<div class="vantagem">
+			<h2 class="vantagem__titulo">Aprenda fazendo</h2>
+			<p class="vantagem__descricao">Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. Nullam a
+				nisl
+				ut
+				ante blandit hendrerit. Aenean sit
+				amet nisi.</p>
+		</div>
+
+		<div class="vantagem">
+			<h2 class="vantagem__titulo">Para todas as idades</h2>
+			<p class="vantagem__descricao">Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. Nullam a
+				nisl
+				ut
+				ante blandit hendrerit. Aenean sit
+				amet nisi.</p>
+		</div>
+
+		<div class="vantagem">
+			<h2 class="vantagem__titulo">Atualizado</h2>
+			<p class="vantagem__descricao">Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. Nullam a
+				nisl
+				ut
+				ante blandit hendrerit. Aenean sit
+				amet nisi.</p>
+		</div>
+
+		<div class="vantagem">
+			<h2 class="vantagem__titulo">Comece hoje</h2>
+			<p class="vantagem__descricao">Mussum Ipsum, cacilds vidis litro abertis. Posuere libero varius. Nullam a
+				nisl
+				ut
+				ante blandit hendrerit. Aenean sit
+				amet nisi.</p>
+		</div>
+	</section>
+	<hr>
+	<section class="newsletter" id="newsletter">
+		<div class="newsletter-c">
+			<div class="newsletter-info">
+				<h2 class="newsletter-info__titulo">Newsletter</h2>
+				<p class="newsletter-info__descricao">Assine e fique por dentro <br>das novidades.</p>
+			</div>
+			<form action="" class="newsletter-form">
+				<input type="text" placeholder="Seu e-mail" class="newsletter-form__input">
+				<button class="newsletter-form__submit">ASSINAR</button>
+			</form>
+		</div>
+	</section>
+	<footer class="footer">
+		<p class="footer__copyright">Este projeto foi feito  por Vinícius Moura em conjunto com @devincasa
+		</p>
+		<a href="index.html">
+			<img src="img/logo.png" alt="Frontbox" class="footer__logo">
+		</a>
+	</footer>
+
 </body>
+
 </html>
